@startuml

title __PIZZA's Class Diagram__\n

  namespace Prototype_AbstractFactory {
    namespace Pizza {
      class Prototype_AbstractFactory.Pizza.Pizza_Calzone {
          + Bake()
          + Clone()
          + Pizza_Calzone()
      }
    }
  }
  

  namespace Prototype_AbstractFactory {
    namespace Pizza {
      class Prototype_AbstractFactory.Pizza.Pizza_Classic {
          + Bake()
          + Clone()
          + Pizza_Classic()
      }
    }
  }
  

  Prototype_AbstractFactory.Pizza.Pizza_Calzone -up-|> Prototype_AbstractFactory.Pizza.Abstracts.Pizza
  Prototype_AbstractFactory.Pizza.Pizza_Classic -up-|> Prototype_AbstractFactory.Pizza.Abstracts.Pizza


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
